staticpages in the middle

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>reserve_app</h1>
+<p>
+    This is the home page for the
+    <a
+        href="https://sharehousetakaraya.wixsite.com/share-house-takaraya?fbclid=PAZXh0bgNhZW0CMTEAAaezntgBVCZER_HFgqtba4M_PQ12nALYZXoceVDoUSSglTFRPIkjJOZ2b_52zg_aem_uGniuxF82MbHhsQpIAMqdw">Takaraya_reservation_app</a>
+</p>
