Finish static pages

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,7 @@
+<% provide(:title, "Home") %>
 <h1>reserve_app</h1>
 <p>
     This is the home page for the
-    <a
-        href="https://sharehousetakaraya.wixsite.com/share-house-takaraya?fbclid=PAZXh0bgNhZW0CMTEAAaezntgBVCZER_HFgqtba4M_PQ12nALYZXoceVDoUSSglTFRPIkjJOZ2b_52zg_aem_uGniuxF82MbHhsQpIAMqdw">Takaraya_reservation_app</a>
+    <a href="https://sharehousetakaraya.wixsite.com/share-house-takaraya?fbclid=PAZXh0bgNhZW0CMTEAAaezntgBVCZER_HFgqtba4M_PQ12nALYZXoceVDoUSSglTFRPIkjJOZ2b_52zg_aem_uGniuxF82MbHhsQpIAMqdw">Takaraya_reservation_app</a>
+    sample application.
 </p>
